fix cursor bug by deleting z-index of mobile div

--- a/web/_includes/style.css
+++ b/web/_includes/style.css
@@ -465,7 +465,6 @@ h2.article-subtitle {
     height: calc(100vh - 300px);
     position: relative;
     background-color: #008751;
-    z-index: -5;
     padding: 10px;
   }
 
